# pointZ

./: .gitignore  FLUTTER_SETUP.md  HANDOFF.md  Makefile  README.md  pubspec.yaml  setup.sh
.github/workflows/: release.yml  test-build.yml
PointZ/: .flutter-plugins-dependencies  README.md  pubspec.yaml
PointZ/android/: local.properties
PointZ/android/app/: build.gradle.kts
PointZ/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
PointZ/ios/Runner.xcodeproj/: project.pbxproj
PointZ/lib/: main.dart
PointZ/lib/screens/: control_screen.dart  discovery_screen.dart
PointZ/lib/services/: command_service.dart  discovery_service.dart
PointZ/linux/: CMakeLists.txt
PointZ/test/: discovery_service_test.dart  gesture_handler_test.dart  gesture_test.dart  widget_test.dart
PointZ/web/: index.html  manifest.json
PointZ/windows/: CMakeLists.txt
PointZ/windows/runner/: main.cpp
PointZerver/: .gitignore  Cargo.toml
PointZerver/src/: main.rs  status_server.rs
PointZerver/src/domain/config/: server_config.rs
PointZerver/src/domain/models/: command.rs  mod.rs
PointZerver/src/features/command/: command_service.rs
PointZerver/src/features/discovery/: discovery_service.rs
PointZerver/src/input/: macos.rs  mod.rs  unix.rs  windows.rs
PointZerver/src/platform/: macos_event_loop.rs  mod.rs
PointZerver/src/tray/: mod.rs  qr_window.rs
PointZerver/src/tray/qr_window/: macos_window.rs  mod.rs
PointZerver/src/utils/: mod.rs
android/: gradle.properties
android/app/: build.gradle.kts
ios/Runner/: Info.plist
lib/screens/: discovery_screen.dart  settings_screen.dart
lib/services/: discovery_service.dart  settings_service.dart
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
scripts/: adb-autoconnect.sh  adb-pair-wireless.sh
test/: discovery_service_test.dart  gesture_handler_test.dart  gesture_test.dart
web/: manifest.json
windows/runner/: Runner.rc
(+28 files in other folders)
