[package]
name = "pointzerver"
version = "0.3.1"
edition = "2021"
description = "PointZ Server - Control your PC cursor from your mobile device"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
qrcode = "0.14"
if-addrs = "0.10"
tray-icon = "0.12"
image = "0.25"
hostname = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
rdev = "0.5"
x11 = "2.21"
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
rdev = "0.5"
core-foundation = "0.10"
cocoa = "0.25"
objc = "0.2"
dispatch = "0.2"

[package.metadata.deb]
maintainer = "KMRH47"
copyright = "2025, KMRH47"
extended-description = """\
PointZ Server - Control your PC cursor from your mobile device.
Runs in the system tray with auto-discovery support."""
depends = "$auto, libgtk-3-0, libayatana-appindicator3-1, libx11-6, libxdo3"
section = "utils"
priority = "optional"
assets = [
    ["target/release/pointzerver", "usr/bin/", "755"],
    ["../assets/pointz.desktop", "usr/share/applications/", "644"],
]

